# Pi_Mpd_Server

./: .gitignore  README.md
backend/: main.py  podcast_download.py  pyproject.toml  requirements.txt  sql_app.db  water_usage.db
backend/my_package/: auth.py  models.py  mpd_controller.py  schemas.py
backend/static/assets/: Music
backend/tpc_package/: opc_client.py  wwt_database.py
frontend/: nuxt.config.ts  package-lock.json  package.json
frontend/components/: PasswordChangeModal.vue  footbar.vue  footer.vue  lyricdisplay.vue  navbar.vue  pc_radiocard.vue
frontend/pages/: bsscale.vue  bulletinboard.vue  editpwd.vue  index.vue  login.vue  pc_playlist.vue  pcplayer.vue  pi_playlist.vue  piplayer.vue  register.vue  tcpsr.vue  userinfo.vue  wwt.vue
frontend/public/images/home_picture/convert/: convert_image.sh
